# cuda_demo

./: README.md  readme.md
demo0/: CMakeLists.txt  hello_gpu  hello_gpu.cu
demo0_HelloWorld/: hello  hello.cu
demo1_EuclideanDistance/: CMakeLists.txt  main.cpp  square.h
demo1_square/: square.cu
demo2_KernelNesting/: KernelNesting.cu  kernelnesting  kernelnesting_ziji
demo3_AdjacentPoint/: AdjacentPoint.cu  AdjacentPoint.h  CMakeLists.txt  cuda_config.h  main.cpp
demo3_AdjacentPoint/input/: pc.txt
